working on smaller closing button for video modal (on small landscape screens). This is to prevent current button/iframe overlapping bug.

--- a/src/app/board/video-modal.component.scss
+++ b/src/app/board/video-modal.component.scss
@@ -1,3 +1,5 @@
+$breakpoint-large: 1365px;
+
 .overlay {
   height: 100vh;
   width: 100%;
@@ -22,7 +24,7 @@
     flex-direction: row;
     flex-wrap: wrap-reverse;
     // height: 70vh;
-    @media only screen and (max-width: 1365px) {
+    @media only screen and (max-width: $breakpoint-large) {
       left: 0px;
       width: 100%;
       height: 100%;
@@ -32,14 +34,14 @@
     .iframe {
       width: 90%;
 
-      @media only screen and (max-width: 1365px) {
+      @media only screen and (max-width: $breakpoint-large) {
         width: 100%;
         height: 85%;
       }
     }
 
     .close-button-container {
-      @media only screen and (max-width: 1365px) {
+      @media only screen and (max-width: $breakpoint-large) {
         height: 15%;
       }
       display: flex;
@@ -49,6 +51,12 @@
 
       .close-button {
         padding: 10px;
+      }
+
+      @media only screen and (max-height: 680px) {
+        .close-button {
+          display: none;
+        }
       }
     }
   }
